# AIgOpt

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
Evaluator/: CVRP.cpp  CVRP.h  CVRP2.cpp  CVRP2.h  IEvaluator.h
Heuristic/: CVRPGreedy.h
Metaheuristic/: IMetaheuristic.h  TabuSearch.h
Metaheuristic/TabuSearch/: TabuList.cpp  TabuList.h  TabuSearch.cpp
Mutate/: IMutate.h  Inverse.cpp  Inverse.h  Shuffle.cpp  Shuffle.h  Swap.cpp  Swap.h
NeighbourhoodGen/: INeighbours.h  MutationNeighbours.cpp  MutationNeighbours.h
Solution/: Solution.cpp  Solution.h
Util/: MetaheuristicLoader.h  PopulationStats.h  ProblemLoader.h  RandomUtils.h
